@@ -37,6 +37,7 @@
 - Fixed Mdx.xml and Mdx.json not serializing/deserialzing super class fields
 - Fixed Mdx.xml and Mdx.json not deserialzing enum fields correctly
 - Fixed Animation flipping Sprites when rendering at a coordinate
+- Fixed TiledParser exception when TiledObjects had non-integer coordinates
 - QuadTrees
   * Added QuadTree interface for all QuadTree implementations
   * Existing Quad class renamed to PointQuadTree
